--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -1,5 +1,5 @@
-<main role="main" class="case-study">
-  <header class="case-study-header">
+<main role="main" class="case-study case-study-groupon">
+  <header class="article-section article-header">
     <nav>
       <a href="/helping">Recent Work</a> /
       <span>Groupon Go Mobile</span>
