--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -1,6 +1,7 @@
 body {
-  font-family: "Aktiv Grotesk", sans-serif;
+  font-family: "Avenir Next", sans-serif;
   font-size: 16px;
+  color: $gray-dark;
 }
 
 h1 {
@@ -15,4 +16,12 @@ h2 {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.2;
+}
+
+p,
+ul,
+ol,
+li {
+  font-size: 18px;
+  line-height: 1.8;
 }
