Add Myntra text content Basic customisation for myntra page Move colors & typography to variables for easier reuse

--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -45,28 +45,28 @@
   </section>
 
   <section class="article-section article-image article-image-list">
-    <div class="article-image-caption">
+    <div class="article-section-caption">
       <h2>Streamlined Interface</h2>
       <p>Groupon Go ushers in a streamlined user experience that everybody can get behind. Attractive and informative icons, legible typography and clean layouts not only help users get around the app with ease, but also allow deals—the real heroes—to take center stage and draw users in.</p>
     </div>
   </section>
 
   <section class="article-section article-image article-image-large">
-    <div class="article-image-caption">
+    <div class="article-section-caption">
       <h2>Decluttered Choices</h2>
       <p>Instead of prompting users to filter out deals they might avail of from an extensive list, the app only asks users to pick a few areas of interest and then takes care of the heavy lifting. By using the device's location data and actively learning about users' habits within the app, Groupon Go displays only those deals that users will care about at the time and place they launch the app — bringing them closer to experiences they will cherish.</p>
     </div>
   </section>
 
   <section class="article-section article-image article-image-list">
-    <div class="article-image-caption">
+    <div class="article-section-caption">
       <h2>Simplified Onboarding</h2>
       <p>Using phone number for signing up simplifies the onboarding process, which also allows users to customize their experience of the app.</p>
     </div>    
   </section>
 
   <section class="article-section article-image article-image-slideshow">
-    <div class="article-image-caption">
+    <div class="article-section-caption">
       <h2>Seamless Payment Flow</h2>
       <p>The payment flow is seamless, which makes it pleasant for the users. At the same time, for Groupon this works very well as there are fewer drop-offs.</p>
     </div>  
