--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -8,5 +8,7 @@
 @import "base/typography";
 
 @import "components/article_sections";
+@import "components/article_components";
 
 @import "pages/groupon";
+@import "pages/myntra";
