Layout for hero header

--- a/source/helping/myntra.html.erb
+++ b/source/helping/myntra.html.erb
@@ -1,17 +1,21 @@
 <main class="case-study case-study-myntra">
-  <header class="article-section article-header">
-    <nav>
-      <a href="/helping">Recent Work</a> /
-      <span>Myntra: Mobile Apps</span>
-    </nav>
+  <header class="hero-section">
+    <div class="hero-section-content">
+      <div class="article-header">
+        <nav class="breadcrumbs">
+          <a href="/helping">Recent Work</a> /
+          <span>Myntra: Mobile Apps</span>
+        </nav>
 
-    <h1>
-      Go 
-      <strong>small</strong>
-      <em>or</em>
-      go <br/>
-      home
-    </h1>
+        <h1 class="article-title">
+          Go 
+          <strong>small</strong>
+          <em>or</em>
+          go <br/>
+          home
+        </h1>
+      </div>
+    </div>
   </header>
 
   <section class="article-section article-metadata">
