--- a/source/stylesheets/components/_article_components.scss
+++ b/source/stylesheets/components/_article_components.scss
@@ -1,3 +1,17 @@
+.breadcrumbs {
+  color: $white;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
+  margin: 9px 0 18px 0;
+
+  a {
+    color: $white;
+    text-decoration: none;
+  }
+}
+
+
 .article-section-caption {
   @include span(4);
 
