--- a/source/stylesheets/components/_article_sections.scss
+++ b/source/stylesheets/components/_article_sections.scss
@@ -1,3 +1,27 @@
+.hero-section {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 0;
+  width: 100%;
+  margin: 0;
+  padding: 62% 0 0 0;
+
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% auto;
+
+  .hero-section-content {
+    display: block;
+    position: absolute;
+    top: 30%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+}
+
 .article-section {
   @include span(12);
   position: relative;
@@ -28,9 +52,22 @@
 }
 
 .article-header {
+  .article-title,
+  .article-subtitle {
+    margin: 0;
+    padding: 0;
+  }
+  
   &::before {
     height: 8px;
     left: span(3 wide);
+  }
+
+  .content {
+    display: block;
+    position: absolute;
+    top: 0;
+    width: span(12);
   }
 }
 
