Add appropriate page titles

--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -1,3 +1,7 @@
+---
+title: Groupon Go App - Uncommon is helping Groupon
+---
+
 <main role="main" class="case-study case-study-groupon">
   <header class="hero-section">
     <div class="hero-section-content">
