--- a/source/helping/myntra.html.erb
+++ b/source/helping/myntra.html.erb
@@ -1,3 +1,7 @@
+---
+title: Myntra Mobile App - Uncommon is helping Myntra
+---
+
 <main class="case-study case-study-myntra">
   <header class="hero-section">
     <div class="hero-section-content">
