--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -58,9 +58,18 @@ title: Groupon Go App - Uncommon is helping Groupon
         <h2>Streamlined Interface</h2>
         <p>Groupon Go ushers in a streamlined user experience that everybody can get behind. Attractive and informative icons, legible typography and clean layouts not only help users get around the app with ease, but also allow deals—the real heroes—to take center stage and draw users in.</p>
       </div>
+
+      <ul class="image-list iphone-image-list">
+        <li><%= image_tag "groupon/interface_01_home.jpg" %></li>
+        <li><%= image_tag "groupon/interface_02_region.jpg" %></li>
+        <li><%= image_tag "groupon/interface_03_search.jpg" %></li>
+        <li><%= image_tag "groupon/interface_04_search.jpg" %></li>
+        <li><%= image_tag "groupon/interface_05_detail.jpg" %></li>
+      </ul>
     </section>
 
     <section class="article-section article-image article-image-large">
+      <%= image_tag "groupon/decluttered.jpg" %>
       <div class="article-section-caption">
         <h2>Decluttered Choices</h2>
         <p>Instead of prompting users to filter out deals they might avail of from an extensive list, the app only asks users to pick a few areas of interest and then takes care of the heavy lifting. By using the device's location data and actively learning about users' habits within the app, Groupon Go displays only those deals that users will care about at the time and place they launch the app — bringing them closer to experiences they will cherish.</p>
@@ -71,14 +80,33 @@ title: Groupon Go App - Uncommon is helping Groupon
       <div class="article-section-caption">
         <h2>Simplified Onboarding</h2>
         <p>Using phone number for signing up simplifies the onboarding process, which also allows users to customize their experience of the app.</p>
-      </div>    
+      </div>
+      <ul class="image-list iphone-image-list">
+        <li><%= image_tag "groupon/onboarding_01.jpg" %></li>
+        <li><%= image_tag "groupon/onboarding_02.jpg" %></li>
+        <li><%= image_tag "groupon/onboarding_03.jpg" %></li>
+      </ul>
     </section>
 
     <section class="article-section article-image article-image-slideshow">
       <div class="article-section-caption">
         <h2>Seamless Payment Flow</h2>
         <p>The payment flow is seamless, which makes it pleasant for the users. At the same time, for Groupon this works very well as there are fewer drop-offs.</p>
-      </div>  
+      </div>
+      <ul class="image-slideshow iphone-image-slideshow">
+        <li>
+          <%= image_tag "groupon/onboarding_01.jpg" %>
+          <figcaption>Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
+        </li>
+        <li>
+          <%= image_tag "groupon/onboarding_02.jpg" %>
+          <figcaption>Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
+        </li>
+        <li>
+          <%= image_tag "groupon/onboarding_03.jpg" %>
+          <figcaption>Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
+        </li>
+      </ul>
     </section>
   </div>
 </main>
