Add layout for article iPhone screen list

--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -60,11 +60,11 @@ title: Groupon Go App - Uncommon is helping Groupon
       </div>
 
       <ul class="image-list iphone-image-list">
-        <li><%= image_tag "groupon/interface_01_home.jpg" %></li>
-        <li><%= image_tag "groupon/interface_02_region.jpg" %></li>
-        <li><%= image_tag "groupon/interface_03_search.jpg" %></li>
-        <li><%= image_tag "groupon/interface_04_search.jpg" %></li>
-        <li><%= image_tag "groupon/interface_05_detail.jpg" %></li>
+        <li class="iphone-image"><%= image_tag "groupon/interface_01_home.jpg" %></li>
+        <li class="iphone-image"><%= image_tag "groupon/interface_02_region.jpg" %></li>
+        <li class="iphone-image"><%= image_tag "groupon/interface_03_search.jpg" %></li>
+        <li class="iphone-image"><%= image_tag "groupon/interface_04_search.jpg" %></li>
+        <li class="iphone-image"><%= image_tag "groupon/interface_05_detail.jpg" %></li>
       </ul>
     </section>
 
@@ -82,9 +82,9 @@ title: Groupon Go App - Uncommon is helping Groupon
         <p>Using phone number for signing up simplifies the onboarding process, which also allows users to customize their experience of the app.</p>
       </div>
       <ul class="image-list iphone-image-list">
-        <li><%= image_tag "groupon/onboarding_01.jpg" %></li>
-        <li><%= image_tag "groupon/onboarding_02.jpg" %></li>
-        <li><%= image_tag "groupon/onboarding_03.jpg" %></li>
+        <li class="iphone-image"><%= image_tag "groupon/onboarding_01.jpg" %></li>
+        <li class="iphone-image"><%= image_tag "groupon/onboarding_02.jpg" %></li>
+        <li class="iphone-image"><%= image_tag "groupon/onboarding_03.jpg" %></li>
       </ul>
     </section>
 
