--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -9,6 +9,9 @@
 
 @import "components/article_sections";
 @import "components/article_components";
+@import "components/article_images";
+
+@import "components/screen_list";
 
 @import "pages/groupon";
 @import "pages/myntra";
