--- a/source/stylesheets/components/_article_components.scss
+++ b/source/stylesheets/components/_article_components.scss
@@ -11,7 +11,6 @@
   }
 }
 
-
 .article-section-caption {
   @include span(4);
 
@@ -49,4 +48,8 @@
       margin-right: auto;
     }
   }
+}
+
+.article-image-list .image-list{
+  @include span(8);
 }
