Add layout for article large single iPhone screen

--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -53,42 +53,46 @@ title: Groupon Go App - Uncommon is helping Groupon
       <p>We quickly realised that Groupon users have varied interests and look for deals that pertain to them—and that, on mobile platforms, it is more important to present appealing deals rather than just offer the tools to find them. So we ditched the map, and focussed on building an intuitive app that did away with complicated procedures and underused features. The result: Groupon Go.</p>
     </section>
 
-    <section class="article-section article-image article-image-list">
+    <section class="article-section article-screen article-screen-list">
       <div class="article-section-caption">
         <h2>Streamlined Interface</h2>
         <p>Groupon Go ushers in a streamlined user experience that everybody can get behind. Attractive and informative icons, legible typography and clean layouts not only help users get around the app with ease, but also allow deals—the real heroes—to take center stage and draw users in.</p>
       </div>
 
-      <ul class="image-list iphone-image-list">
-        <li class="iphone-image"><%= image_tag "groupon/interface_01_home.jpg" %></li>
-        <li class="iphone-image"><%= image_tag "groupon/interface_02_region.jpg" %></li>
-        <li class="iphone-image"><%= image_tag "groupon/interface_03_search.jpg" %></li>
-        <li class="iphone-image"><%= image_tag "groupon/interface_04_search.jpg" %></li>
-        <li class="iphone-image"><%= image_tag "groupon/interface_05_detail.jpg" %></li>
+      <ul class="screen-list iphone-screen-list">
+        <li class="iphone-screen"><%= image_tag "groupon/interface_01_home.jpg" %></li>
+        <li class="iphone-screen"><%= image_tag "groupon/interface_02_region.jpg" %></li>
+        <li class="iphone-screen"><%= image_tag "groupon/interface_03_search.jpg" %></li>
+        <li class="iphone-screen"><%= image_tag "groupon/interface_04_search.jpg" %></li>
+        <li class="iphone-screen"><%= image_tag "groupon/interface_05_detail.jpg" %></li>
       </ul>
     </section>
 
-    <section class="article-section article-image article-image-large">
-      <%= image_tag "groupon/decluttered.jpg" %>
+    <section class="article-section article-screen article-screen-large">
+      <div class="screen">
+        <span class="iphone-screen iphone-screen-large">
+          <%= image_tag "groupon/decluttered.jpg" %>      
+        </span>
+      </div>
       <div class="article-section-caption">
         <h2>Decluttered Choices</h2>
         <p>Instead of prompting users to filter out deals they might avail of from an extensive list, the app only asks users to pick a few areas of interest and then takes care of the heavy lifting. By using the device's location data and actively learning about users' habits within the app, Groupon Go displays only those deals that users will care about at the time and place they launch the app — bringing them closer to experiences they will cherish.</p>
       </div>
     </section>
 
-    <section class="article-section article-image article-image-list">
+    <section class="article-section article-screen article-screen-list">
       <div class="article-section-caption">
         <h2>Simplified Onboarding</h2>
         <p>Using phone number for signing up simplifies the onboarding process, which also allows users to customize their experience of the app.</p>
       </div>
-      <ul class="image-list iphone-image-list">
-        <li class="iphone-image"><%= image_tag "groupon/onboarding_01.jpg" %></li>
-        <li class="iphone-image"><%= image_tag "groupon/onboarding_02.jpg" %></li>
-        <li class="iphone-image"><%= image_tag "groupon/onboarding_03.jpg" %></li>
+      <ul class="screen-list iphone-screen-list">
+        <li class="iphone-screen"><%= image_tag "groupon/onboarding_01.jpg" %></li>
+        <li class="iphone-screen"><%= image_tag "groupon/onboarding_02.jpg" %></li>
+        <li class="iphone-screen"><%= image_tag "groupon/onboarding_03.jpg" %></li>
       </ul>
     </section>
 
-    <section class="article-section article-image article-image-slideshow">
+    <section class="article-section article-screen article-screen-slideshow">
       <div class="article-section-caption">
         <h2>Seamless Payment Flow</h2>
         <p>The payment flow is seamless, which makes it pleasant for the users. At the same time, for Groupon this works very well as there are fewer drop-offs.</p>
