--- a/source/stylesheets/components/_screen_list.scss
+++ b/source/stylesheets/components/_screen_list.scss
@@ -1,4 +1,4 @@
-.image-list {
+.screen-list {
   margin: 0;
   padding: 0;
 
@@ -8,17 +8,12 @@
   }
 }
 
-.iphone-image-list {
+.iphone-screen-list {
   li {
-    margin: 21px;
-    width: 168px;
-    height: 342px;
-    overflow: hidden;
-    background: transparent image-url("devices/iphone_small_black.svg") no-repeat top left;
-    padding: 40px 11px;
-  }
+    margin: 0 36px 36px 0;
 
-  .iphone-image img {
-    height: 260px;
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
   }
 }
