--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -12,6 +12,7 @@
 @import "components/article_images";
 
 @import "components/screen_list";
+@import "components/screens";
 
 @import "pages/groupon";
 @import "pages/myntra";
