Add shadows to iPhone device mockups

--- a/source/stylesheets/components/_screen_list.scss
+++ b/source/stylesheets/components/_screen_list.scss
@@ -10,10 +10,12 @@
 
 .iphone-screen-list {
   li {
-    margin: 0 36px 36px 0;
+    &:nth-child(3n+1) {
+      margin-left: -26px;
+    }
 
     &:nth-child(3n) {
-      margin-right: 0;
+      margin-right: -30px;
     }
   }
 }
