Adjust large iPhone slideshow

--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -97,18 +97,18 @@ title: Groupon Go App - Uncommon is helping Groupon
         <h2>Seamless Payment Flow</h2>
         <p>The payment flow is seamless, which makes it pleasant for the users. At the same time, for Groupon this works very well as there are fewer drop-offs.</p>
       </div>
-      <ul class="image-slideshow iphone-image-slideshow">
-        <li>
+      <ul class="image-slideshow iphone-screen-slideshow">
+        <li class="iphone-screen iphone-screen-large">
           <%= image_tag "groupon/onboarding_01.jpg" %>
-          <figcaption>Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
+          <figcaption class="slideshow-caption">Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
         </li>
-        <li>
+        <li class="iphone-screen iphone-screen-large">
           <%= image_tag "groupon/onboarding_02.jpg" %>
-          <figcaption>Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
+          <figcaption class="slideshow-caption">Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
         </li>
-        <li>
+        <li class="iphone-screen iphone-screen-large">
           <%= image_tag "groupon/onboarding_03.jpg" %>
-          <figcaption>Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
+          <figcaption class="slideshow-caption">Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
         </li>
       </ul>
     </section>
