--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -11,8 +11,9 @@
 @import "components/article_components";
 @import "components/article_images";
 
-@import "components/screen_list";
 @import "components/screens";
+@import "components/screen_list";
+@import "components/screen_slideshow";
 
 @import "pages/groupon";
 @import "pages/myntra";
