Groupon go: fix images for payment slideshow

--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -99,15 +99,15 @@ title: Groupon Go App - Uncommon is helping Groupon
       </div>
       <ul class="image-slideshow iphone-screen-slideshow">
         <li class="iphone-screen iphone-screen-large">
-          <%= image_tag "groupon/onboarding_01.jpg" %>
+          <%= image_tag "groupon/payment_01.jpg" %>
           <figcaption class="slideshow-caption">Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
         </li>
         <li class="iphone-screen iphone-screen-large">
-          <%= image_tag "groupon/onboarding_02.jpg" %>
+          <%= image_tag "groupon/payment_02.jpg" %>
           <figcaption class="slideshow-caption">Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
         </li>
         <li class="iphone-screen iphone-screen-large">
-          <%= image_tag "groupon/onboarding_03.jpg" %>
+          <%= image_tag "groupon/payment_03.jpg" %>
           <figcaption class="slideshow-caption">Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
         </li>
       </ul>
