Myntra mobile: add layout for stats and full width image

--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -108,7 +108,7 @@ title: Groupon Go App - Uncommon is helping Groupon
         </li>
         <li class="iphone-screen iphone-screen-large">
           <%= image_tag "groupon/payment_03.jpg" %>
-          <figcaption class="slideshow-caption">Little details, like displaying payment options in a bottom-drawer instead of its own screen, increase the perceptible speed of experience.</figcaption>
+          <figcaption class="slideshow-caption"> Saved cards in a visually interesting way for faster checkouts.</figcaption>
         </li>
       </ul>
     </section>
