--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -15,5 +15,7 @@
 @import "components/screen_list";
 @import "components/screen_slideshow";
 
+@import "components/stats";
+
 @import "pages/groupon";
 @import "pages/myntra";
