Rewrite layout of article sections & containers to allow more flexibility in layouts

--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -17,8 +17,8 @@ title: Groupon Go App - Uncommon is helping Groupon
     </div>
   </header>
 
-  <div class="article-content">
-    <section class="article-section article-metadata">
+  <section class="container article-section article-metadata ">
+    <div class="content">
       <div>
         <h2>What we did</h2>
         <ul>
@@ -34,13 +34,17 @@ title: Groupon Go App - Uncommon is helping Groupon
           <li>eCommerce</li>
         </ul>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="article-section article-text">
+  <section class="container article-section article-text">
+    <div class="content">
       <p>Known as the world's fastest growing business with a formidable presence in nearly 50 countries, Groupon is India's favourite daily deals service with the best local offers on apparel, fine dining, entertainment, wellness and travel on the web. So when Groupon India wanted to  reach its users with a whole new way to find deals on the move, we jumped at the chance to take a crack at it—fully aware that we would have to go beyond the brief to build something useful, usable and delightful.</p>
-    </section>
+    </div>
+  </section>
 
-    <section class="article-section article-text">
+  <section class="container article-section article-text">
+    <div class="content">
       <p>Delving into Groupon's analytics and researching user behaviour, we understood that contextless maps do little to tempt users to buy things. So we decided to go back to the drawing board and answer a few important questions:</p>
       
       <ul>
@@ -51,9 +55,11 @@ title: Groupon Go App - Uncommon is helping Groupon
       </ul>
 
       <p>We quickly realised that Groupon users have varied interests and look for deals that pertain to them—and that, on mobile platforms, it is more important to present appealing deals rather than just offer the tools to find them. So we ditched the map, and focussed on building an intuitive app that did away with complicated procedures and underused features. The result: Groupon Go.</p>
-    </section>
+    </div>
+  </section>
 
-    <section class="article-section article-screen article-screen-list">
+  <section class="container article-section article-screen article-screen-list">
+    <div class="content">
       <div class="article-section-caption">
         <h2>Streamlined Interface</h2>
         <p>Groupon Go ushers in a streamlined user experience that everybody can get behind. Attractive and informative icons, legible typography and clean layouts not only help users get around the app with ease, but also allow deals—the real heroes—to take center stage and draw users in.</p>
@@ -66,9 +72,11 @@ title: Groupon Go App - Uncommon is helping Groupon
         <li class="iphone-screen"><%= image_tag "groupon/interface_04_search.jpg" %></li>
         <li class="iphone-screen"><%= image_tag "groupon/interface_05_detail.jpg" %></li>
       </ul>
-    </section>
+    </div>
+  </section>
 
-    <section class="article-section article-screen article-screen-large">
+  <section class="container article-section article-screen article-screen-large">
+    <div class="content">
       <div class="screen">
         <span class="iphone-screen iphone-screen-large">
           <%= image_tag "groupon/decluttered.jpg" %>      
@@ -78,9 +86,11 @@ title: Groupon Go App - Uncommon is helping Groupon
         <h2>Decluttered Choices</h2>
         <p>Instead of prompting users to filter out deals they might avail of from an extensive list, the app only asks users to pick a few areas of interest and then takes care of the heavy lifting. By using the device's location data and actively learning about users' habits within the app, Groupon Go displays only those deals that users will care about at the time and place they launch the app — bringing them closer to experiences they will cherish.</p>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="article-section article-screen article-screen-list">
+  <section class="container article-section article-screen article-screen-list">
+    <div class="content">
       <div class="article-section-caption">
         <h2>Simplified Onboarding</h2>
         <p>Using phone number for signing up simplifies the onboarding process, which also allows users to customize their experience of the app.</p>
@@ -90,9 +100,11 @@ title: Groupon Go App - Uncommon is helping Groupon
         <li class="iphone-screen"><%= image_tag "groupon/onboarding_02.jpg" %></li>
         <li class="iphone-screen"><%= image_tag "groupon/onboarding_03.jpg" %></li>
       </ul>
-    </section>
+    </div>
+  </section>
 
-    <section class="article-section article-screen article-screen-slideshow">
+  <section class="container article-section article-screen article-screen-slideshow">
+    <div class="content">
       <div class="article-section-caption">
         <h2>Seamless Payment Flow</h2>
         <p>The payment flow is seamless, which makes it pleasant for the users. At the same time, for Groupon this works very well as there are fewer drop-offs.</p>
@@ -111,6 +123,6 @@ title: Groupon Go App - Uncommon is helping Groupon
           <figcaption class="slideshow-caption"> Saved cards in a visually interesting way for faster checkouts.</figcaption>
         </li>
       </ul>
-    </section>
-  </div>
+    </div>
+  </section>
 </main>
