--- a/source/stylesheets/base/_grid.scss
+++ b/source/stylesheets/base/_grid.scss
@@ -18,7 +18,7 @@ $susy: (
 
 .container,
 .article-header,
-.article-content {
+.article-container {
   @include container;
   padding: 0 gutter();
 }
