--- a/source/stylesheets/components/_article_images.scss
+++ b/source/stylesheets/components/_article_images.scss
@@ -1,10 +1,9 @@
 .image-fullwidth {
-  display: block;
-  width: 100%;
+  @include span(12);
 
-  .article-text & {
-    position: relative;
-    width: span(12 of 8);
-    margin: 20px span(-2 wide of 8);
-  }
+  // .article-text & {
+  //   position: relative;
+  //   width: span(12 of 8);
+  //   margin: 20px span(-2 wide of 8);
+  // }
 }
