--- a/source/helping/myntra.html.erb
+++ b/source/helping/myntra.html.erb
@@ -22,8 +22,8 @@ title: Myntra Mobile App - Uncommon is helping Myntra
     </div>
   </header>
 
-  <div class="article-content">
-    <section class="article-section article-metadata">
+  <section class="container article-section article-metadata">
+    <div class="content">
       <div>
         <h2>What we did</h2>
         <ul>
@@ -39,15 +39,17 @@ title: Myntra Mobile App - Uncommon is helping Myntra
           <li>Fashion</li>
         </ul>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="article-section article-text">
+  <section class="container article-section article-text">
+    <div class="content">
       <p>Having grown from a modest merchandise personalisation business to India's largest online fashion and lifestyle store in just seven years, Myntra is in it to win the ecommerce game. With over 600 brands—and counting—on their roster, the Bangalore-based startup was well on its way to becoming a household name across the country with their hot-off-the-ramp Android app. Tasked with designing and developing a mobile store to live up to the Myntra name, we set out to create a shopping experience that wouldn't go out of style in a season.</p>
-    </section>
-  </div>
+    </div>
+  </section>
 
-  <section class="article-section article-section-stats">
-    <ul class="stats-container">
+  <section class="article-stats">
+    <ul class="container stats-content">
       <li>
         Iterations
         <strong>64</strong>
@@ -70,28 +72,32 @@ title: Myntra Mobile App - Uncommon is helping Myntra
     </ul>
   </section>
 
-  <div class="article-content">
-    <section class="article-section article-text">
+  <section class="container article-section article-text">
+    <div class="content">
       <p>We kicked things off with Myntra by prototyping early and often, beginning with basic wireframes right from week one of our project. This helped enable conversations with stakeholders from the start so that we could experiment together, allow our concepts to evolve and enable the survival of only the fittest solutions. When our mockups hit version 64, we knew we'd finally gotten it right.</p>
+    </div>
 
-      <%= image_tag "myntra/wireframes.png", class: "image-fullwidth" %>
-    </section>
+    <%= image_tag "myntra/wireframes.png", class: "image-fullwidth" %>
+  </section>
 
-    <section class="article-section article-text">
+  <section class="container article-section article-text">
+    <div class="content">
       <p>At Uncommon, we all share a passion for design, regardless of our core strengths -- and that's what helps us communicate ideas better and translate them fluently from paper to code. Rather than firing one-way directives to developers on how to execute graphics, we engage each other in conversations about how the app should look and feel. We've found this synergy to be conducive towards crafting quality products that look great and take full advantage of the platforms we build on. For instance, we anticipated custom user interface elements across the Myntra app and built them parallel to the design process, leading to quicker turnarounds during the development phase.</p>
 
       <p>Our programming ethos centers around our in-depth understanding of the way users interact with the web and mobile devices. With the Myntra store, we were conscious of the fact that Indian smartphone users worry about battery life and have to put up with spotty network connectivity, even in urban areas. That's why we worked with the Myntra engineers to tweak backend services so that the app makes as few network calls as possible. We also ensured that large portions of data were cached on the device, thereby reducing dependency on carrier coverage and conserving power.</p>
 
       <p>Sometimes even strong teams need a helping hand to achieve great results. As free agents, we bring a fresh perspective to the table and integrate with teams to balance competing interests and help get things done. With an entity as large as Myntra that ships 20,000 orders daily to over 400 cities, it was important for us to break down systemic inertia, ask hard questions and draw our collective focus towards building an amazing product -- and our years of experience working with teams of all sizes stood us in good stead.</p>
-    </section>
+    </div>
+  </section>
 
-    <section class="article-section article-image article-image-full">
-      
-    </section>
+<!--   <section class="container article-section article-image article-image-full">
+    
+  </section> -->
 
-    <section class="article-section article-text">
+  <section class="container article-section article-text">
+    <div class="content">
       <p>To inform our ideas for the look and feel of the store, we researched a variety of luxury brands and fashion houses. The result is a minimalist interface that boldly showcases high fashion imagery and complements the wide range of brands, from exclusive boutiques to trendy sporting goods purveyors. At the same time, it remains easy to use, whether you're browsing new looks for the season or hunting down that one dream accessory to tie your stunning new outfit together.</p>
       <p>What we ended up building together with Myntra is not just another mobile store, but rather a new shopping experience that inspires fashion enthusiasts to express themselves with style statements that are all their own.</p>
-    </section>
-  </div>
+    </div>
+  </section>
 </main>
