Add Fisdom page: images + content Add white iPhone SVG

--- a/source/stylesheets/components/_screens.scss
+++ b/source/stylesheets/components/_screens.scss
@@ -12,6 +12,14 @@
   }
 }
 
+.iphone-screen-white {
+  background-image: image-url("devices/iphone_small_white.svg");
+
+  img {
+    border: solid 2px $black;
+  }
+}
+
 .iphone-screen-large {
   width: 402px;
   height: 704px;
