Add home link Add home page

--- a/source/helping/fisdom.html.erb
+++ b/source/helping/fisdom.html.erb
@@ -2,6 +2,8 @@
 title: Fisdom Mobile Apps - Uncommon is helping Fisdom
 ---
 
+<h1 id="home-link"><a href="/">uncommon</a></h1>
+
 <main class="case-study case-study-fisdom">
   <header class="hero-section">
     <div class="hero-section-content">
