--- a/source/helping/myntra.html.erb
+++ b/source/helping/myntra.html.erb
@@ -2,6 +2,8 @@
 title: Myntra Mobile App - Uncommon is helping Myntra
 ---
 
+<h1 id="home-link"><a href="/">uncommon</a></h1>
+
 <main class="case-study case-study-myntra">
   <header class="hero-section">
     <div class="hero-section-content">
