--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,12 @@
 ---
-title: Welcome to Middleman
+title: Uncommon
 ---
 
-<h1>Home</h1>
+<h1 id="home-link"><a href="/">uncommon</a></h1>
+
+<section class="container uncommon-intro">
+  <div class="content">
+    <p>We help startups and established companies like Flipkart, TCS, Groupon, Newshunt, Swiggy and IBM design and build digital products for human beings.</p>
+    <p>If you struggle to connect with people through their devices, <a href="mailto:hello@uncommon.is">we can help.</a></p>
+  </div>
+</section>
