--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -2,6 +2,8 @@
 title: Groupon Go App - Uncommon is helping Groupon
 ---
 
+<h1 id="home-link"><a href="/">uncommon</a></h1>
+
 <main role="main" class="case-study case-study-groupon">
   <header class="hero-section">
     <div class="hero-section-content">
