--- a/source/stylesheets/pages/_myntra.scss
+++ b/source/stylesheets/pages/_myntra.scss
@@ -1,3 +1,8 @@
+.helping_myntra #home-link a::before {
+  background: $orange-yellow;
+}
+
+
 .case-study-myntra {
   $primary-color: $orange-yellow;
 
