Update Fisdom layout

--- a/source/helping/fisdom.html.erb
+++ b/source/helping/fisdom.html.erb
@@ -51,26 +51,12 @@ title: Fisdom Mobile Apps - Uncommon is helping Fisdom
     </div>
   </section>
 
-  <section class="container article-section article-screen article-screen-large">
+  <section class="container article-section article-screen article-screen-list article-screen-list-large">
     <div class="content">
-      <div class="screen">
-        <span class="iphone-screen iphone-screen-large">
-          <%= image_tag "fisdom/visual_oomph_1.jpg" %>
-        </span>
-      </div>
-
-      <div class="article-section-caption">
-        <h2>Visual Oomph</h2>
-        <p>Added visual associations with all goals and numbers. This way the user has a better way to plan for his investments.</p>
-      </div>
-    </div>
-
-    <div class="content">
-      <div class="screen">
-        <span class="iphone-screen iphone-screen-large">
-          <%= image_tag "fisdom/visual_oomph_2.jpg" %>
-        </span>
-      </div>
+      <ul class="screen-list iphone-screen-list">
+        <li class="iphone-screen-large"><%= image_tag "fisdom/visual_oomph_1.jpg" %></li>
+        <li class="iphone-screen-large"><%= image_tag "fisdom/visual_oomph_2.jpg" %></li>
+      </ul>
 
       <div class="article-section-caption">
         <h2>Visual Oomph</h2>
