--- a/source/stylesheets/components/_screen_list.scss
+++ b/source/stylesheets/components/_screen_list.scss
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
 
+
+
   li {
     display: block;
     float: left;
@@ -9,6 +11,20 @@
 }
 
 .iphone-screen-list {
+  @include span(8);
+  
+  li {
+    &:nth-child(3n+1) {
+      margin-left: -26px;
+    }
+
+    &:nth-child(3n) {
+      margin-right: -30px;
+    }
+  }
+}
+
+.iphone-screen-list-large {
   li {
     &:nth-child(3n+1) {
       margin-left: -26px;
